# code-lod

./: CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  commands.md  getting-started.md  index.md
spec/: cli-interface.md  code-parsing.md  configuration-management.md  description-storage.md  git-integration.md  hierarchical-scopes.md  llm-integration.md  staleness-tracking.md
src/code_lod/: __init__.py  __main__.py  cli.py  config.py  db.py  hashing.py  models.py  pipeline.py  staleness.py
src/code_lod/cli/: __init__.py  clean.py  config.py  generate.py  hooks.py  init.py  read.py  status.py  update.py  validate.py
src/code_lod/llm/: generator.py
src/code_lod/llm/description_generator/: __init__.py  anthropic.py  generator.py  mock.py  ollama.py  openai.py
src/code_lod/lod_file/: __init__.py  comment_parser.py  reader.py  writer.py
src/code_lod/parsers/: base.py  tree_sitter_parser.py
tests/: test_model_config.py
