[project]
name = "code-lod"
version = "0.1.0"
description = "Your code at different levels of detail"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.75.0",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
    "typer>=0.21.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material[imaging]>=9.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[project.scripts]
code-lod = "code_lod.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_lod"]
